# rust-tests

./: README.md
test_1/: Cargo.toml
test_1/src/: iterators.rs  main.rs  strings.rs
test_actix/: Cargo.toml
test_actix/src/: main.rs  models.rs
test_diesel/: Cargo.toml
test_diesel/migrations/2020-05-14-195838_create_posts/: up.sql
test_diesel/src/: lib.rs
test_rocket/: .gitignore  Cargo.toml  README.md  Rocket.toml  benchmark.yml
test_rocket/migrations/2020-05-05-203320_create_posts/: up.sql
test_rocket/src/: fairing.rs  handler.rs  main.rs  models.rs  schema.rs
