[package]
name = "test_actix"
version = "0.1.0"
authors = ["Fabien Bellanger <valentil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
env_logger = "*"
serde = "1.0.106"
