[package]
name = "test_rocket"
version = "0.1.0"
authors = ["Fabien Bellanger <valentil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.4" # { version = "0.4.4", default-features = false, features = ["json", "diesel_mysql_pool"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
# diesel = { version = "1.4", features = ["mysql", "chrono"] }
